Java/JDK-8352290/compiler-output/exception-K1Jdk8Test.txt
org.jetbrains.kotlin.test.JavaCompilationError: Java files are not compiled successfully
/root/autodl-tmp/tmp/tests-common-newProject_test_2864955154367664193/org.jetbrains.kotlin.test.CodeSmithDifferentialTest2681181test/java-sources/main/HeRgY.java:96: error: name clash: vqem(T2,GvOQvc3G) in G4MNbeH and vqem(T1,GvOQvc3G<T1,T0>) in GvOQvc3G have the same erasure, yet neither overrides the other
public abstract class HeRgY extends G4MNbeH<Void, WAiv, RVI>  {
                ^
  where T2,T1,T0 are type-variables:
    T2 extends Object declared in class G4MNbeH
    T1 extends Object declared in class GvOQvc3G
    T0 extends Object declared in class GvOQvc3G
1 error
	at org.jetbrains.kotlin.test.JavaCompilationResult.assertSuccessful(JvmCompilationUtils.kt:37)
	at org.jetbrains.kotlin.test.java.JavaCompilerFacade.compileJavaFiles(JavaCompilerFacade.kt:45)
	at org.jetbrains.kotlin.test.backend.ir.JvmIrBackendFacade.transform(JvmIrBackendFacade.kt:54)
	at org.jetbrains.kotlin.test.backend.ir.JvmIrBackendFacade.transform(JvmIrBackendFacade.kt:28)
	at org.jetbrains.kotlin.test.TestStep$FacadeStep.processModule(TestStep.kt:47)
	at org.jetbrains.kotlin.test.TestRunner.processModule(TestRunner.kt:206)
	at org.jetbrains.kotlin.test.TestRunner.hackyProcessModule(TestRunner.kt:197)
	at org.jetbrains.kotlin.test.TestRunner.processModule(TestRunner.kt:141)
	at org.jetbrains.kotlin.test.TestRunner.runTestPipeline(TestRunner.kt:92)
	at org.jetbrains.kotlin.test.TestRunner.runTestImpl(TestRunner.kt:70)
	at org.jetbrains.kotlin.test.TestRunner.runTest(TestRunner.kt:30)
	at org.jetbrains.kotlin.test.TestRunner.runTest$default(TestRunner.kt:28)
	at org.jetbrains.kotlin.test.runners.AbstractKotlinCompilerTest.runTest(AbstractKotlinCompilerTest.kt:91)
	at org.jetbrains.kotlin.test.CodeSmithDifferentialTest$IDifferentialTest.testProgram(CodeSmithDifferentialTest.kt:43)
	at org.jetbrains.kotlin.test.CodeSmithDifferentialTest.doOneRound(CodeSmithDifferentialTest.kt:129)
	at org.jetbrains.kotlin.test.CodeSmithDifferentialTest$test$1$1$job$1.invokeSuspend(CodeSmithDifferentialTest.kt:177)
	at kotlin.coroutines.jvm.internal.BaseContinuationImpl.resumeWith(ContinuationImpl.kt:33)
	at kotlinx.coroutines.DispatchedTask.run(DispatchedTask.kt:101)
	at kotlinx.coroutines.internal.LimitedDispatcher$Worker.run(LimitedDispatcher.kt:113)
	at kotlinx.coroutines.scheduling.TaskImpl.run(Tasks.kt:89)
	at kotlinx.coroutines.scheduling.CoroutineScheduler.runSafely(CoroutineScheduler.kt:589)
	at kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.executeTask(CoroutineScheduler.kt:823)
	at kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.runWorker(CoroutineScheduler.kt:720)
	at kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.run(CoroutineScheduler.kt:707)
